# mc-query

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  test
.github/workflows/: build.yml
resources/: server.properties
src/: errors.rs  lib.rs  packet.rs  query.rs  rcon.rs  socket.rs  status.rs  varint.rs
src/query/: mod.rs  packet.rs
src/rcon/: client.rs  mod.rs  packet.rs
src/status/: data.rs  mod.rs  packet.rs
