[package]
name = "mc-query"
version = "0.1.0"
edition = "2021"
authors = ["Ari Prakash"]
description = "Implementations of Server List Ping, Query, and RCON for minecraft servers"
documentation = "https://docs.rs/mc-query"
readme = "https://github.com/ariscript/mc-query/blob/main/README.md"
homepage = "https://github.com/ariscript/mc-query"
repository = "https://github.com/ariscript/mc-query"
license = "MIT OR Apache-2.0"
keywords = ["minecraft", "rcon", "query"]
categories = ["api-bindings", "network-programming"]

[dependencies]
async-trait = "0.1.56"
bytes = { version = "1.2.0", features = ["serde"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"
tokio = { version = "1.20.0", features = ["full"] }
