[package]
name = "mc-query"
version = "0.2.0"
edition = "2021"
authors = ["Dheeraj Prakash"]
description = "Implementations of Server List Ping, Query, and RCON for minecraft servers"
documentation = "https://docs.rs/mc-query"
readme = "README.md"
homepage = "https://github.com/dheerajpv/mc-query"
repository = "https://github.com/dheerajpv/mc-query"
license = "MIT OR Apache-2.0"
keywords = ["minecraft", "rcon", "query"]
categories = ["api-bindings", "network-programming"]
exclude = ["/test", "/resources"]

[dependencies]
async-trait = "0.1.56"
bytes = { version = "1.2.0", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"
tokio = { version = "1.20.0", features = ["full"] }
