[package]
name = "mc-query"
version = "1.1.0"
edition = "2021"
authors = ["Ari Prakash"]
description = "Implementations of Server List Ping, Query, and RCON for minecraft servers"
documentation = "https://docs.rs/mc-query"
readme = "README.md"
homepage = "https://github.com/ariscript/mc-query"
repository = "https://github.com/ariscript/mc-query"
license = "MIT OR Apache-2.0"
keywords = ["minecraft", "rcon", "query"]
categories = ["api-bindings", "network-programming"]
exclude = ["/test", "/resources"]

[dependencies]
async-trait = "0.1.68"
bytes = { version = "1.4.0", features = ["serde"] }
paste = "1.0.15"
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
